// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should render Modal.Content 1`] = `
<div
  className="nice-modal-body"
  style={
    Object {
      "padding": null,
    }
  }
>
  Modal content
</div>
`;

exports[`<Modal /> should render Modal.Footer 1`] = `
<div
  className="nice-modal-footer"
  style={Object {}}
>
  Modal footer
</div>
`;

exports[`<Modal /> should render Modal.Header 1`] = `
<div
  className="nice-modal-header"
  style={Object {}}
>
  <a
    className="nice-modal-close"
    href="#"
    onClick={[Function]}
  >
    <i
      className="icon fa-times"
    />
  </a>
  <h4>
    Modal header
  </h4>
</div>
`;

exports[`<Modal /> should render a Modal with custom classNames/styles 1`] = `
<div
  class="nice-modal-overlay"
>
  <div
    class="nice-modal info my-custom-classname"
    style="top:0"
  >
    <div
      class="nice-modal-content"
    >
      <div
        class="nice-modal-header my-custom-classname"
        style="top:0"
      >
        <h4>
          Modal header
        </h4>
      </div>
      <div
        class="nice-modal-sub my-custom-classname"
        style="top:0"
      >
        Modal sub header
      </div>
      <div
        class="nice-modal-body my-custom-classname"
        style="top:0"
      >
        Modal content
      </div>
      <div
        class="nice-modal-footer my-custom-classname"
        style="top:0"
      >
        Modal footer
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should render a hidden, viewport centered Modal with overlay 1`] = `
<div
  className="nice-modal info viewport-center hidden tall wide"
  style={Object {}}
>
  <div
    className="nice-modal-content"
  >
    <Header
      className={null}
      onClose={[Function]}
      style={Object {}}
    >
      Modal header
    </Header>
    <Sub
      className={null}
      style={Object {}}
    >
      Modal sub header
    </Sub>
    <Content
      className={null}
      padding={null}
      style={Object {}}
    >
      Modal content
    </Content>
    <Footer
      className={null}
      style={Object {}}
    >
      Modal footer
    </Footer>
  </div>
</div>
`;

exports[`<Modal /> should render a simple Modal 1`] = `
<div
  className="nice-modal-overlay"
>
  <div
    className="nice-modal info"
    style={Object {}}
  >
    <div
      className="nice-modal-content"
    >
      <Header
        className={null}
        onClose={null}
        style={Object {}}
      >
        Modal header
      </Header>
      <Sub
        className={null}
        style={Object {}}
      >
        Modal sub header
      </Sub>
      <Content
        className={null}
        padding={null}
        style={Object {}}
      >
        Modal content
      </Content>
      <Footer
        className={null}
        style={Object {}}
      >
        Modal footer
      </Footer>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should render a styled Modal 1`] = `
<div
  className="nice-modal-overlay"
>
  <div
    className="nice-modal info"
    style={
      Object {
        "height": "600px",
        "width": "600px",
      }
    }
  >
    <div
      className="nice-modal-content"
    >
      <Header
        className={null}
        onClose={[Function]}
        style={Object {}}
      >
        Modal header
      </Header>
      <Sub
        className={null}
        style={Object {}}
      >
        Modal sub header
      </Sub>
      <Content
        className={null}
        padding={null}
        style={Object {}}
      >
        Modal content
      </Content>
      <Footer
        className={null}
        style={Object {}}
      >
        Modal footer
      </Footer>
    </div>
  </div>
</div>
`;
